--- a/index.html
+++ b/index.html
@@ -1,40 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Stability AI Image Generator</title>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<title>DALL-E Image Generator</title>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
-	<h1>Stability AI Image Generator</h1>
-	<p>Enter a prompt to generate an image:</p>
-	<input type="text" id="prompt">
-	<button onclick="generateImage()">Generate</button>
-	<br><br>
-	<img id="image">
+	<h1>DALL-E Image Generator</h1>
+	<label for="prompt">Enter a prompt:</label>
+	<input type="text" id="prompt" name="prompt">
+	<button id="generate-btn">Generate Image</button>
+	<div id="image-container"></div>
 	<script>
-		function generateImage() {
-			var promptText = document.getElementById("prompt").value;
-			var apiUrl = "https://api.replicate.ai/v1/model/woctezuma/stable-diffusion-gpu/inference";
-			var apiKey = "2011f746bf2f45096b23a4907c291223460e4d53";
-			var requestData = {
-				"prompt": promptText,
-				"response_length": 512,
-				"model": "woctezuma/stable-diffusion-gpu"
-			};
-			$.ajax({
-				type: "POST",
-				url: apiUrl,
-				data: JSON.stringify(requestData),
-				headers: {
-					"Authorization": "Bearer " + apiKey,
-					"Content-Type": "application/json"
-				},
-				success: function(responseData) {
-					var imageUrl = responseData["outputs"][0]["data"]["image/png;base64"];
-					document.getElementById("image").src = "data:image/png;base64," + imageUrl;
-				}
+		$(document).ready(function() {
+			$('#generate-btn').click(function() {
+				var prompt = $('#prompt').val();
+				$.ajax({
+					type: 'POST',
+					url: 'https://api.openai.com/v1/images/generations',
+					headers: {
+						'Content-Type': 'application/json',
+						'Authorization': 'Bearer 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'
+					},
+					data: JSON.stringify({
+						model: 'image-alpha-001',
+						prompt: prompt,
+						num_images: 1,
+						size: '512x512',
+						response_format: 'url'
+					}),
+					success: function(response) {
+						var imageUrl = response.data[0].url;
+						$('#image-container').html('<img src="' + imageUrl + '">');
+					},
+					error: function(xhr, status, error) {
+						console.error(error);
+					}
+				});
 			});
-		}
+		});
 	</script>
 </body>
 </html>
