--- a/index.html
+++ b/index.html
@@ -2,59 +2,74 @@
 <html>
 <head>
 	<title>Poop Button</title>
-	<style type="text/css">
+	<style>
 		body {
-			background-color: #f2f2f2;
-			font-family: Arial, sans-serif;
+			background-color: #F5DEB3;
+			text-align: center;
+			font-family: sans-serif;
+			font-size: 2em;
+			margin-top: 10%;
 		}
-
-		button {
-			font-size: 30px;
-			padding: 20px 40px;
+		#poop-button {
+			display: inline-block;
 			background-color: red;
 			color: white;
-			border: none;
+			padding: 20px 40px;
 			border-radius: 10px;
 			cursor: pointer;
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
+			font-weight: bold;
 		}
-
-		button:hover {
-			background-color: #cc0000;
+		#poop-button.blue {
+			background-color: blue;
 		}
-
 		.confetti {
-			position: fixed;
-			width: 10px;
-			height: 10px;
-			background-color: #f00;
-			opacity: 1;
-			animation: confetti 2s ease-out;
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			z-index: 100;
+			pointer-events: none;
 		}
-
+		.confetti img {
+			position: absolute;
+			top: 0;
+			left: 0;
+			pointer-events: none;
+			user-select: none;
+			opacity: 0;
+			animation: confetti 3s ease-out forwards;
+		}
 		@keyframes confetti {
-			from { transform: translate(0, 0); opacity: 1; }
-			to { transform: translate(300px, 1000px); opacity: 0; }
+			0% {
+				transform: rotate(0deg);
+			}
+			100% {
+				transform: rotate(360deg);
+			}
 		}
 	</style>
 </head>
 <body>
-	<button id="poop-button" onclick="poop()">POOP</button>
-
-	<script type="text/javascript">
-		function poop() {
-			document.getElementById("poop-button").style.backgroundColor = "blue";
-			for (var i = 0; i < 100; i++) {
-				var confetti = document.createElement("div");
-				confetti.classList.add("confetti");
-				confetti.style.left = Math.random() * window.innerWidth + "px";
-				confetti.style.animationDelay = Math.random() * 2 + "s";
-				document.body.appendChild(confetti);
-			}
-		}
+	<button id="poop-button">Poop</button>
+	<audio id="bark-sound" src="https://quicksounds.com/uploads/tracks/1300511505_1587370143_551972182.mp3"></audio>
+	<div class="confetti"></div>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<script>
+		$(document).ready(function() {
+			$("#poop-button").click(function() {
+				$(this).addClass("blue");
+				$("#bark-sound")[0].play();
+				$(".confetti").html("");
+				for (var i = 0; i < 50; i++) {
+					var size = Math.floor(Math.random() * 60) + 10;
+					var left = Math.floor(Math.random() * 100) + 1;
+					var duration = Math.floor(Math.random() * 5) + 2;
+					var delay = Math.floor(Math.random() * 3);
+					$(".confetti").append("<img src='https://i.imgur.com/RnT9yGf.png' style='width: "+size+"px; left: "+left+"%; animation-duration: "+duration+"s; animation-delay: "+delay+"s;'>");
+				}
+			});
+		});
 	</script>
 </body>
 </html>
